--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "serverless.com",
   "license": "MIT",
   "dependencies": {
-    "serverless-google-cloudfunctions": "^1.1.0"
     "puppeteer": "^0.13.0",
+    "serverless-google-cloudfunctions": "^1.1.0",
+    "superagent": "^3.8.1"
   }
 }
