--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "sinon": "^7.3.2"
   },
   "dependencies": {
+    "@google-cloud/storage": "^2.5.0",
+    "fs-extra": "^8.0.1",
+    "moment": "^2.24.0",
     "puppeteer": "^1.17.0"
   }
 }
