--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@google-cloud/storage": "^2.5.0",
+    "axios": "^0.19.0",
     "fs-extra": "^8.0.1",
     "moment": "^2.24.0",
     "puppeteer": "^1.17.0"
