Add appendix for the post of esa

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,4 @@ GOOGLE_APPLICATION_CREDENTIALS=/path/to/gcp_credential.json
 ESA_TEAM_ID=YOUR_ESA_TEAM_ID
 ESA_ACCESS_TOKEN=YOUR_ESA_ACCESS_TOKEN
 ESA_CATEGORY=path/to/esa/category
+ESA_BODY_APPENDIX=YOUR_ESA_BODY_APPENDIX
